trunk/Archive2/1d/f1670ac0e5e9a5/output
main.cpp: In function 'int main()':
main.cpp:43:10: error: no match for 'operator+' (operand types are 'double' and 'Interval<double>')
     1.0  + i1;
          ^
main.cpp:45:10: error: no match for 'operator+' (operand types are 'float' and 'Interval<double>')
     1.0f + i1;
          ^
main.cpp:47:10: error: no match for 'operator+' (operand types are 'int' and 'Interval<double>')
     1    + i1;
          ^
